@@ -1,7 +1,6 @@
 package de.tum.in.www1.artemis.repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.jpa.repository.JpaRepository;
 
@@ -13,9 +12,9 @@ import de.tum.in.www1.artemis.domain.Authority;
 public interface AuthorityRepository extends JpaRepository<Authority, String> {
 
     /**
-     * @return a list of all the authorities
+     * @return an unmodifiable list of all the authorities
      */
     default List<String> getAuthorities() {
-        return findAll().stream().map(Authority::getName).collect(Collectors.toList());
+        return findAll().stream().map(Authority::getName).toList();
     }
 }
