@@ -1,6 +1,5 @@
 package de.tum.in.www1.artemis;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.codec.digest.DigestUtils.sha1Hex;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -262,12 +261,12 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
             final String idString = textSubmission.getId() + ";0-30;" + textSubmission.getText().substring(0, 30);
             return Segment.newBuilder().setId(sha1Hex(idString)).setSubmissionId(textSubmission.getId().intValue()).setStartIndex(0).setEndIndex(30)
                     .setText(textSubmission.getText().substring(0, 30)).build();
-        }).collect(toList());
+        }).toList();
         List<Segment> segments2 = textSubmissions2.stream().map(textSubmission -> {
             final String idString = textSubmission.getId() + ";0-30;" + textSubmission.getText().substring(0, 30);
             return Segment.newBuilder().setId(sha1Hex(idString)).setSubmissionId(textSubmission.getId().intValue()).setStartIndex(0).setEndIndex(30)
                     .setText(textSubmission.getText().substring(0, 30)).build();
-        }).collect(toList());
+        }).toList();
         List<TextBlock> textBlocks1 = atheneService.parseTextBlocks(segments1, exercise1.getId());
         List<TextBlock> textBlocks2 = atheneService.parseTextBlocks(segments2, exercise1.getId());
         for (TextBlock textBlock : textBlocks1) {
