@@ -6,7 +6,6 @@ import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -206,7 +205,7 @@ class StaticCodeAnalysisIntegrationTest extends AbstractSpringIntegrationBambooB
             category.setPenalty(5D);
             category.setMaxPenalty(15D);
             category.setState(CategoryState.GRADED);
-        }).collect(Collectors.toList());
+        }).toList();
         staticCodeAnalysisCategoryRepository.saveAll(alteredCategories);
 
         // Perform the request and assert that the original state was restored
